layout/generic/nsFlexContainerFrame.cpp
@@ -1868,6 +1868,7 @@ nsFlexContainerFrame::MarkIntrinsicISizesDirty()
   for (nsIFrame* childFrame : mFrames) {
     childFrame->Properties().Delete(CachedFlexMeasuringReflow());
   }
+  nsContainerFrame::MarkIntrinsicISizesDirty();
 }
 
 nscoord
